--- a/docs/modules/ROOT/pages/amazon-cloudwatch-logs.adoc
+++ b/docs/modules/ROOT/pages/amazon-cloudwatch-logs.adoc
@@ -36,7 +36,7 @@ You can also set up a local version of CloudWatch Logs manually, first start a L
 
 [source,bash,subs="verbatim,attributes"]
 ----
-docker run --rm --name local-cloudwatch-logs --publish 4566:4582 -e SERVICES=logs -e START_WEB=0 -d localstack/localstack:3.0.1
+docker run --rm --name local-cloudwatchlogs --publish 4566:4582 -e SERVICES=logs -e START_WEB=0 -d localstack/localstack:3.0.1
 ----
 This starts CloudWatch instance that is accessible on port `4566`.
 
@@ -58,7 +58,7 @@ However, you can go right to the completed example.
 
 Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive].
 
-The solution is located in the `amazon-cloudwatch-logs-quickstart` {quickstarts-tree-url}/amazon-cloudwatch-logs-quickstart[directory].
+The solution is located in the `amazon-cloudwatchlogs-quickstart` {quickstarts-tree-url}/amazon-cloudwatchlogs-quickstart[directory].
 
 == Creating the Maven project
 
@@ -68,15 +68,15 @@ First, we need a new project. Create a new project with the following command:
 ----
 mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \
     -DprojectGroupId=org.acme \
-    -DprojectArtifactId=amazon-cloudwatch-logs-quickstart \
+    -DprojectArtifactId=amazon-cloudwatchlogs-quickstart \
     -DclassName="org.acme.cloudwatchlogs.QuarkusCloudWatchLogsSyncResource" \
     -Dpath="/sync" \
-    -Dextensions="resteasy,resteasy-jackson,amazon-cloudwatch-logs,resteasy-mutiny"
-cd amazon-cloudwatch-logs-quickstart
+    -Dextensions="resteasy,resteasy-jackson,amazon-cloudwatchlogs,resteasy-mutiny"
+cd amazon-cloudwatchlogs-quickstart
 ----
 
 This command generates a Maven structure importing the RESTEasy/JAX-RS, Mutiny and Amazon CloudWatch Client extensions.
-After this, the `amazon-cloudwatch-logs` extension has been added to your `pom.xml` as well as the Mutiny support for RESTEasy.
+After this, the `amazon-cloudwatchlogs` extension has been added to your `pom.xml` as well as the Mutiny support for RESTEasy.
 
 == Creating JSON REST service
 
@@ -216,7 +216,7 @@ public class QuarkusCloudWatchLogsSyncLogsResource extends QuarkusCloudWatchLogs
 
 ----
 
-<1> Inject the client provided by the amazon-cloudwatch-logs-logs extension
+<1> Inject the client provided by the amazon-cloudwatchlogs-logs extension
 
 Using the Amazon CloudWatch Logs SDK, we can get & push log data to CloudWatch Logs Stream.
 
@@ -454,4 +454,4 @@ And add the following dependency to the application `pom.xml`:
 
 == Configuration Reference
 
-include::./includes/quarkus-amazon-cloudwatch-logs.adoc[]
+include::./includes/quarkus-amazon-cloudwatchlogs.adoc[]
