--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -19,3 +19,4 @@
 * xref:amazon-ssm.adoc[SSM]
 * xref:amazon-sts.adoc[STS]
 * xref:dev-services.adoc[Dev Services for Amazon Services]
+* xref:dev-services.adoc[OpenTelemetry for Amazon Services]
